--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h4>A website for Heavy Chemicals:</h4>
     <p>I designed this website using figma and with the help of a developer we brought this website live. <br>
     Currently I handle the hosting and maintaining of this website you can check the live website
-    <a href="www.heavychem.com">here.</a></p>
+    <a href="https://www.heavychem.com/">here.</a></p>
 
     <h3>Education</h3>
     <p>I have completed my hight school and am currently pursuing a bachelors degree in Bcom(Accounting and Finance)</p>
@@ -23,5 +23,8 @@
 </body>
 <footer>
     This is the footer
+        <hr />
+    <a href="./Public/aboutme.html">About Me</a><br />
+    <a href="./Public/contactme.html">Contact Me</a>
 </footer>
 </html>
